# Task-Manager

./: .gitignore  Dockerfile  Makefile  README.md  build.sh  db.sqlite3  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  staticfiles.json
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: helpers.py  mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: label.json  status.json  task.json  test_label.json  test_status.json  test_user.json  user.json
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_rename_date_created_label_created_at.py  0003_alter_label_options_alter_label_created_at_and_more.py
task_manager/labels/tests/: test_crud.py  test_forms.py  test_models.py  testcase.py
task_manager/statuses/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options_alter_status_created_at_and_more.py
task_manager/statuses/tests/: test_crud.py  test_forms.py  test_models.py  testcase.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_options_alter_task_author_and_more.py  0003_tasklabelrelation_task_labels.py  0004_alter_task_options_alter_task_author_and_more.py  0005_alter_task_author_alter_task_executor.py  (+1 more)
task_manager/templates/: base.html  index.html  login.html
task_manager/users/: forms.py  models.py  urls.py  views.py
(+28 files in other folders)
