[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["blacksmokezip <hanzomainer1488@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.3"
django-filter = "^23.3"
rollbar = "^0.16.3"
django-extensions = "^3.2.3"
django = "4.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
ipython = "^8.16.1"
pytest-django = "^4.5.2"
django-extensions = "^3.2.3"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
